Fix: Remove unnecessary scrollbars

--- a/src/global.css
+++ b/src/global.css
@@ -29,7 +29,6 @@ html, body {
   height: 100%;
   border: none !important;
   box-shadow: none !important;
-  overflow-y: auto !important;
 }
 
 body {
